@@ -188,6 +188,11 @@ static int getAntennas(VexData *V, Vex *v, const CorrParams &params)
 			fvex_double(&(p->x->value), &(p->x->units), &A->dx);
 			fvex_double(&(p->y->value), &(p->y->units), &A->dy);
 			fvex_double(&(p->z->value), &(p->z->units), &A->dz);
+
+			// Correct for various definitions of year: yr_vex = 365.2425  yr_goddard=365.25
+			A->dx *= (365.25/365.2425);
+			A->dy *= (365.25/365.2425);
+			A->dz *= (365.25/365.2425);
 		}
 		else
 		{
